# loki-file-access

./: Cargo.toml  LICENSE  README.md
docs/adr/: 0001-runtime-agnostic-future.md  0002-mit-license.md
src/: api.rs  error.rs  future.rs  lib.rs  token.rs
src/platform/: desktop.rs  mod.rs  wasm.rs
src/platform/android/: jni_fd.rs  jni_intents.rs  mod.rs
src/platform/desktop/: filters.rs  mod.rs  zenity.rs
src/platform/ios/: bookmark.rs  mod.rs
tests/: desktop.rs
